--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # dubelyoo.com
 
 title: dubelyoo
-description: Welcome to my site of a mishmash of technology (and other hobbies) notes/articles for reference. It's really just for me.
+description: Welcome to my site of a technology mishmash (and other hobbies) notes/articles for reference. It's really just for me.
 show_downloads: false
 
 # Build settings
